--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4",
+    "vite": "^3.2.4",
     "vitest": "^0.25.1"
   }
 }
