lint + new create scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "Node",
     "baseUrl": ".",
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
-  "exclude": [
-    "node_modules/*",
-  ]
+  "exclude": ["node_modules/*"]
 }
