--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Code Challenge in Typescript",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "lint": "prettier -w . && eslint '**/*.{js,ts}' --fix"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
